# Rust-CRUD

./: Cargo.toml  README.md  docker-compose.yaml
migrations/: 20240702130023_table_creations.sql
src/: errors.rs  main.rs
src/order/: mod.rs  order_controller.rs  order_model.rs  order_service.rs
src/product/: mod.rs  product_controller.rs  product_model.rs  product_service.rs
src/user/: mod.rs  user_controller.rs  user_model.rs  user_service.rs
