[package]
name = "project"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
actix-web = "4"
sqlx = { version = "0.6.3", features = [ 
    "runtime-tokio-rustls", 
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline" 
    ] }
chrono = { version = "0.4.38", features = ["serde"] }
